--- a/lucene/pom.xml
+++ b/lucene/pom.xml
@@ -33,7 +33,7 @@
 
     <properties>
         <orientdb.version>${project.version}</orientdb.version>
-        <lucene.version>7.3.0</lucene.version>
+        <lucene.version>7.3.1-SNAPSHOT</lucene.version>
         <geotools.version>13.2</geotools.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <argLine>-ea
