--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,7 @@
         <module>object</module>
         <module>server</module>
         <module>tools</module>
-        <module>tests</module>
+<!--        <module>tests</module>-->
         <module>distributed</module>
         <module>distributed-v2</module>
         <module>graphdb</module>
