--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -17,7 +17,7 @@
     <parent>
         <groupId>com.orientechnologies</groupId>
         <artifactId>orientdb-parent</artifactId>
-        <version>2.2.37</version>
+        <version>2.2.377-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
 
@@ -119,14 +119,6 @@
             <artifactId>orientdb-jdbc</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.orientechnologies</groupId>
-            <artifactId>orientdb-studio</artifactId>
-            <version>${project.version}</version>
-            <type>zip</type>
-        </dependency>
-
-
     </dependencies>
     <build>
         <plugins>
