Fix latest issues in jackson export/import

--- a/pom.xml
+++ b/pom.xml
@@ -183,7 +183,7 @@
         <osgi.dynamicImport/>
         <osgi.private/>
         <!-- | shared build/report plugins version -->
-        <surefire.version>2.19.1</surefire.version>
+        <surefire.version>3.0.0-M4</surefire.version>
         <sonatypeOssDistMgmtSnapshotsUrl>https://oss.sonatype.org/content/repositories/snapshots/
         </sonatypeOssDistMgmtSnapshotsUrl>
         <heapSize>2048m</heapSize>
